apps/02-metrics/prometheus/thanos-sidecar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-k8s-thanos-discovery
  labels:
    app: prometheus-k8s-thanos-discovery
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/part-of: kube-prometheus
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: grpc
    port: 10901
    targetPort: grpc
  - name: http
    port: 10902
    targetPort: http
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: k8s
    prometheus: k8s
